// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vararg spread optimization $multi 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function multi(self, ...)
        return ...
    end
    local function test(self, ...)
        return select(
            2,
            multi(nil, ...)
        )
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization basic use 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(self, ...)
        return pick(nil, ...)
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization block statement 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(self, ...)
        local result
        do
            result = pick(nil, ...)
        end
        return result
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization body-less arrow function 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(____, ...)
        return pick(nil, ...)
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization curry 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function test(self, fn, ...)
        return fn(nil, ...)
    end
    return test(
        nil,
        function(____, arg) return arg end,
        \\"foobar\\"
    )
end
return ____exports"
`;

exports[`vararg spread optimization curry with indirect type 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function test(self, obj, ...)
        local fn = obj.fn
        return fn(nil, ...)
    end
    return test(
        nil,
        {
            fn = function(____, arg) return arg end
        },
        \\"foobar\\"
    )
end
return ____exports"
`;

exports[`vararg spread optimization finally clause 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(self, ...)
        do
            pcall(
                function()
                    error(\\"foobar\\", 0)
                end
            )
            do
                return pick(nil, ...)
            end
        end
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization function type declared inside scope 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function test(self, ...)
        local function fn(____, ...)
            local args = {...}
            return args[1]
        end
        return fn(nil, ...)
    end
    test(nil, \\"foobar\\")
end
return ____exports"
`;

exports[`vararg spread optimization if statement 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(self, ...)
        if true then
            return pick(nil, ...)
        end
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;

exports[`vararg spread optimization loop statement 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function pick(self, ...)
        local args = {...}
        return args[2]
    end
    local function test(self, ...)
        repeat
            do
                return pick(nil, ...)
            end
        until not false
    end
    return test(nil, \\"a\\", \\"b\\", \\"c\\")
end
return ____exports"
`;
